--- a/about.html
+++ b/about.html
@@ -5,7 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About leveloneadventure</title>
+    <meta name="twitter:title" content="About">
+    <meta property="og:type" content="website">
     <meta name="description" content="A curious one, eh?">
+    <meta property="og:image" content="assets/img/adventure.png">
+    <meta name="twitter:image" content="assets/img/adventure.png">
+    <meta name="twitter:description" content="A curious one, eh?">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
