--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>leveloneadventure</title>
+    <meta name="twitter:title" content="leveloneadventure">
+    <meta property="og:image" content="assets/img/adventure.png">
     <meta name="description" content="A central hub for a noob DM's resources 😂">
+    <meta name="twitter:image" content="assets/img/adventure.png">
+    <meta name="twitter:description" content="A noob DM's central hub for resources! 😂">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
