--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="features-clean">
         <div class="container text-start">
             <div class="intro">
-                <h1 class="text-center">Welcome to leveloneadventure!</h1>
+                <h1 class="text-center">Welcome to leveloneadventure!🧙‍♂️</h1>
                 <p class="text-center"><br>Hi there! My name is&nbsp;Jeff&nbsp;and I'm the DM around these parts. Looking forward to playing with you!&nbsp;🥳<br><br></p>
             </div>
         </div>
