--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/Features-Clean.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="https://objectstorage.ap-seoul-1.oraclecloud.com/n/cn0yxy9huccd/b/helianthus/o/Images%2Fadventure.png">
 </head>
 
 <body>
