--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/Features-Clean.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" href="https://objectstorage.ap-seoul-1.oraclecloud.com/n/cn0yxy9huccd/b/helianthus/o/Images%2Fadventure.png">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                         <h5 class="mb-0">What is this?</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text"><br><strong><a href=https://leveloneadventure.me/">leveloneadventure.me</a></strong>&nbsp;is a simple website created using markdown on&nbsp;<a href="https://pages.github.com/">Github Pages</a>. I created this to be a minimal, central hub for my FoundryVTT games, D&amp;D session notes, useful websites, and some contact details.<br><br></p>
+                        <p class="card-text"><br><strong><a href="https://leveloneadventure.me">leveloneadventure.me</a></strong>&nbsp;is a simple website created using markdown on&nbsp;<a href="https://pages.github.com/">Github Pages</a>. I created this to be a minimal, central hub for my FoundryVTT games, D&amp;D session notes, useful websites, and some contact details.<br><br></p>
                     </div>
                 </div>
             </div>
