--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <section class="features-clean">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">About</h2>
+                <h2 class="text-center"><a href="https://leveloneadventure.me">leveloneadventure</a></h2>
                 <p class="text-center">Curious about the stuff here?</p>
             </div>
         </div>
