--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container text-start">
             <div class="intro">
                 <h1 class="text-center">Welcome to leveloneadventure!🧙‍♂️</h1>
-                <p class="text-center"><br>Hi there! My name is&nbsp;Jeff&nbsp;and I'm the DM around these parts. Looking forward to playing with you!&nbsp;🥳<br><br></p>
+                <p class="text-center"><br>Hi there! My name is&nbsp;<a href="https://www.youtube.com/watch?v=AfIOBLr1NDU">Jeff</a>&nbsp;and I'm the DM around these parts. Looking forward to playing with you!&nbsp;🥳<br><br></p>
             </div>
         </div>
         <div class="container">
