--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="card-body">
                             <h4 class="card-title">FoundryVTT Servers</h4>
                             <h6 class="text-muted card-subtitle mb-2">My active games</h6>
-                            <p class="card-text">All you need is the will to play, everything else that isn't food is provided! 😄</p><a class="card-link" href="https://dnd.leveloneadventure.me/">Main D&amp;D Server</a><a class="card-link" href="https://clau.leveloneadventure.me/">Backup</a>
+                            <p class="card-text">All you need is the will to play, everything else (that isn't food) is provided! 😄</p><a class="card-link" href="https://dnd.leveloneadventure.me/">Main D&amp;D Server</a><a class="card-link" href="https://clau.leveloneadventure.me/">Backup</a>
                         </div>
                     </div>
                 </div>
