--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     <meta name="twitter:title" content="About">
     <meta property="og:type" content="website">
     <meta name="description" content="A curious one, eh?">
-    <meta property="og:image" content="assets/img/adventure.png">
-    <meta name="twitter:image" content="assets/img/adventure.png">
+    <meta property="og:image" content="assets/img/lvl1.png">
+    <meta name="twitter:image" content="assets/img/lvl1.png">
     <meta name="twitter:description" content="A curious one, eh?">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
