--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="twitter:title" content="leveloneadventure">
     <meta property="og:image" content="assets/img/lvl1.png">
     <meta name="description" content="A central hub for a noob DM's resources 😂">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="assets/img/lvl1.png">
     <meta name="twitter:description" content="A noob DM's central hub for resources! 😂">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
