--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>leveloneadventure</title>
-    <meta name="twitter:title" content="leveloneadventure">
     <meta property="og:image" content="assets/img/lvl1.png">
     <meta name="description" content="A central hub for a noob DM's resources 😂">
     <meta name="twitter:title" content="Let's play D&D!">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="assets/img/lvl1.png">
     <meta name="twitter:description" content="A noob DM's central hub for resources! 😂">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
