--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta property="og:image" content="assets/img/lvl1.png">
     <meta property="og:title" content="Let's play D&D!">
     <meta name="description" content="A central hub for a noob DM's resources 😂">
-    <meta name="twitter:title" content="Let's play D&D!">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="assets/img/lvl1.png">
+    <meta name="twitter:site" content="leveloneadventure.me">
+    <meta name="twitter:creator" content="@manameisjep">
+    <meta name="twitter:title" content="Let's play D&D!">
     <meta name="twitter:description" content="A noob DM's central hub for resources! 😂">
+    <meta name="twitter:image" content="assets/img/lvl1.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
