--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:creator" content="@manameisjep">
     <meta name="twitter:title" content="Let's play D&D!">
     <meta name="twitter:description" content="A noob DM's central hub for resources! 😂">
-    <meta name="twitter:image" content="assets/img/lvl1.png">
+    <meta name="twitter:image" content="https://objectstorage.ap-seoul-1.oraclecloud.com/n/cn0yxy9huccd/b/helianthus/o/Images%2Flvl1.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
