removed excess line breaks

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                         <h5 class="mb-0">About the DM</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text"><br><br>I learned D&amp;D during the quarantine of 2020 and immediately fell in love with it.<br>I'm a microbiology major who likes tinkering with computers, playing guitar, and rolling dice.<br><br></p>
+                        <p class="card-text"><br>I learned D&amp;D during the quarantine of 2020 and immediately fell in love with it.<br>I'm a microbiology major who likes tinkering with computers, playing guitar, and rolling dice.<br><br></p>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                         <h5 class="mb-0">Contact Details</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text"><br>Send me an email if you have questions! You can also add me up on discord, or follow me on social media! I follow back.😁<br>✉️<strong>Email:</strong>&nbsp;<a href="mailto:leveloneadventure@gmail.com">leveloneadventure@gmail.com</a><br>📷<strong>Instagram:</strong>&nbsp;<a href="https://www.instagram.com/jeffuntalan/">jeffuntalan</a><br>🐦<strong>Twitter:</strong>&nbsp;<a href="https://twitter.com/manameisjep">@manameisjep</a><br>🎮<strong>Discord Name:</strong>&nbsp;Helianthus#8290<br>🖥️<strong>Steam Friend Code:</strong>&nbsp;<a href="https://steamcommunity.com/id/helianthusuplb/">143867609</a><br><br></p>
+                        <p class="card-text">Send me an email if you have questions! You can also add me up on discord, or follow me on social media! I follow back.😁<br>✉️<strong>Email:</strong>&nbsp;<a href="mailto:leveloneadventure@gmail.com">leveloneadventure@gmail.com</a><br>📷<strong>Instagram:</strong>&nbsp;<a href="https://www.instagram.com/jeffuntalan/">jeffuntalan</a><br>🐦<strong>Twitter:</strong>&nbsp;<a href="https://twitter.com/manameisjep">@manameisjep</a><br>🎮<strong>Discord Name:</strong>&nbsp;Helianthus#8290<br>🖥️<strong>Steam Friend Code:</strong>&nbsp;<a href="https://steamcommunity.com/id/helianthusuplb/">143867609</a><br><br></p>
                     </div>
                 </div>
                 <div class="col"></div>
