added new links pointing to the wiki

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Campaign Notes</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Notes and media, all in Notion</h6>
-                            <p class="card-text">Events in games are archived, along with any handouts and media. 📝</p><a class="card-link" href="https://wdh.purpledragontavern.me/campaign">Waterdeep: Dragon Heist</a><a class="card-link" href="https://www.notion.so/Curse-of-Strahd-Campaign-Log-d9a77d1b81e5485d9f72bc04fb97c141">Others</a>
+                            <h4 class="card-title">The Wiki</h4>
+                            <h6 class="text-muted card-subtitle mb-2">A complete knowledgebase of campaign notes, and more.</h6>
+                            <p class="card-text">Events in games are archived here, along with guides and other useful stuff. 📝</p><a class="card-link" href="https://notes.leveloneadventure.me/D&D/WDH">Waterdeep: Dragon Heist</a><a class="card-link" href="https://notes.leveloneadventure.me/">Homepage</a>
                         </div>
                     </div>
                 </div>
