--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="card-body">
                             <h4 class="card-title">The Wiki</h4>
                             <h6 class="text-muted card-subtitle mb-2">A complete knowledgebase of campaign notes, and more.</h6>
-                            <p class="card-text">Events in games are archived here, along with guides and other useful stuff. 📝</p><a class="card-link" href="https://notes.leveloneadventure.me/D&D/WDH">Waterdeep: Dragon Heist</a><a class="card-link" href="https://notes.leveloneadventure.me/">Homepage</a>
+                            <p class="card-text">Events in games are archived here, along with guides and other useful stuff. 📝</p><a class="card-link" href="https://notes.leveloneadventure.me">Wiki Home</a><a class="card-link" href="https://notes.leveloneadventure.me/D&D/WDH">Waterdeep: Dragon Heist</a>
                         </div>
                     </div>
                 </div>
